--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyectoCompi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11a.jar=C:\\Users\\Usuario\\Documents\\Programas\\jflex-1.6.1\\lib\\java-cup-11a.jar
 file.reference.jflex-1.6.1.jar=C:\\Users\\Usuario\\Documents\\Programas\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jflex-1.6.1.jar}
+    ${file.reference.jflex-1.6.1.jar}:\
+    ${file.reference.java-cup-11a.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
