intermediate table created with temps

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.java-cup-11a.jar=C:\\Users\\Christian\\Documents\\Proyecto Compi 2\\ProyectoCompiladores\\java-cup-11a.jar
+file.reference.jflex-1.6.1.jar=C:\\Users\\Christian\\Documents\\Proyecto Compi 2\\ProyectoCompiladores\\jflex-1.6.1.jar
+user.properties.file=C:\\Users\\Christian\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
