--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/proyectoCompi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-cup-11a.jar=C:\\Users\\Usuario\\Documents\\Programas\\jflex-1.6.1\\lib\\java-cup-11a.jar
+file.reference.java-cup-11a.jar-1=java-cup-11a.jar
 file.reference.jflex-1.6.1.jar=C:\\Users\\Usuario\\Documents\\Programas\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
+file.reference.jflex-1.6.1.jar-1=jflex-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jflex-1.6.1.jar}:\
-    ${file.reference.java-cup-11a.jar}
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.java-cup-11a.jar-1}:\
+    ${file.reference.jflex-1.6.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +66,7 @@ main.class=proyectocompi.Tree
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
